force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__DeclarationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeclarationType__c</fullName>
    <label>Declaration Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeclarationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>