force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__IsDirect__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Direct</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDirect</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>