force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__IsPrimaryGroup__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Group</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryGroup</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>