force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__IsSelfRelationship__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSelfRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Self Relationship</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSelfRelationship</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>