force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__IsShareholder__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsShareholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shareholder</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsShareholder</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>