force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__PartyRelationshipTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyRelationshipTypeId__c</fullName>
    <label>Party Relationship Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyRelationshipTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>