force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__rel_1726825196198_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825196198_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyRelatedParty_PartyId_map_Party__rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyRelatedParty_PartyId_map_Party__rel</relationshipLabel>
    <relationshipName>rel_1726825196198_end</relationshipName>
    <type>Lookup</type>
</CustomField>