force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__rel_1726825203914_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825203914_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyRelatedParty_RelatedPartyId_map_rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyRelatedParty_RelatedPartyId_map_rel</relationshipLabel>
    <relationshipName>rel_1726825203914_end</relationshipName>
    <type>Lookup</type>
</CustomField>