force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__rel_1726825206671_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825206671_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyRelatedParty_RelatedInverseReco_rel</label>
    <referenceTo>ssot__PartyRelatedParty__dlm</referenceTo>
    <relationshipLabel>PartyRelatedParty_RelatedInverseReco_rel</relationshipLabel>
    <relationshipName>rel_1726825206671_end</relationshipName>
    <type>Lookup</type>
</CustomField>