force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__RelatedFromDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedFromDate__c</fullName>
    <label>Related From Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedFromDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>