force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__RelatedToDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedToDate__c</fullName>
    <label>Related To Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedToDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>