force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__ShareholderHierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShareholderHierarchyLevel__c</fullName>
    <label>Shareholder Hierarchy Level</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShareholderHierarchyLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>