force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__ShareholderHierarchyRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShareholderHierarchyRole__c</fullName>
    <label>Shareholder Hierarchy Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShareholderHierarchyRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>