force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__ShareholderType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShareholderType__c</fullName>
    <label>Shareholder Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShareholderType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>