force-app/main/default/objects/ssot__PartyRelatedParty__dlm/fields/ssot__TotalSharePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalSharePercent__c</fullName>
    <label>Total Share Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalSharePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>